--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 </head>
 <body>
   <h1>Michał Sikorski</h1>
-  <img src="sikorski.jpg" alt="Zdjęcie Michała Sikorskiego">
+  <img src="sikorski.jpg" width="50%" height="50%">
   
-  <h2>O mnie</h2>
-  <p>Witaj na mojej stronie! Nazywam się Michał Sikorski i jestem <em>programistą</em> z pasją do tworzenia stron internetowych. Mam doświadczenie w HTML, CSS i JavaScript oraz frameworku Bootstrap.</p>
+  <h2></h2>
+  <p>Ta strona jest poświęcona, Michałowi Sikorskiemu i jego tajnemu planowi podbicia świata.</p>
 
-  <h2>Ważne osiągnięcia</h2>
+  <h2></h2>
   <ul>
-    <li>Ukończenie studiów informatycznych na Uniwersytecie XYZ</li>
-    <li>Praca jako główny programista w firmie ABC</li>
-    <li>Otrzymanie nagrody "Najlepszy programista roku" w 2020</li>
+    <li></li>
+    <li></li>
+    <li></li>
   </ul>
 
   <h2>Cytat</h2>
