--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 </head>
 <body>
   <h1>Michał Sikorski</h1>
-  <img src="sikorski.jpg" width="50%" height="50%">
+  <a href="https://raw.githubusercontent.com/michal-sikorsk/michalsikorski/main/sikorski_old.jpg">
+  <img src="https://raw.githubusercontent.com/michal-sikorsk/michalsikorski/main/sikorski_old.jpg" alt="Zdjęcie bez tła">
+  <img src="sikorski.jpg" style="width: 50%; height: 50%;">
   
   <h2></h2>
   <p>Ta strona jest poświęcona, Michałowi Sikorskiemu i jego tajnemu planowi podbicia świata.</p>
