--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <h1>Michał Sikorski</h1>
-  <img src="https://raw.githubusercontent.com/michal-sikorsk/michalsikorski/main/sikorski.jpg" alt="Zdjęcie bez tła">
+  <a href="https://raw.githubusercontent.com/michal-sikorsk/michalsikorski/main/sikorski.jpg">Zdjęcie bez tła</a>
   <img src="sikorski_old.jpg" style="width: 50%; height: 50%;">
   
   <h2></h2>
