--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 </head>
 <body>
   <h1>Michał Sikorski</h1>
-  <p1>
-  <a href="https://raw.githubusercontent.com/michal-sikorsk/michalsikorski/main/sikorski.jpg">Zdjęcie bez tła</a>
-  </p1>
+  <h1><a href="https://raw.githubusercontent.com/michal-sikorsk/michalsikorski/main/sikorski.jpg">Zdjęcie bez tła</a></h1>
+  <p>
   <img src="sikorski_old.jpg" style="width: 20%; height: 20%;">
+  </p>
   
   <h2></h2>
   <p>Ta strona jest poświęcona, Michałowi Sikorskiemu i jego tajnemu planowi podbicia świata.</p>
