--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 </head>
 <body>
   <h1>Michał Sikorski</h1>
-  <h1><a href="https://raw.githubusercontent.com/michal-sikorsk/michalsikorski/main/sikorski.jpg">Zdjęcie bez tła</a></h1>
   <p>
   <img src="sikorski_old.jpg" style="width: 20%; height: 20%;">
+  <img src="sikorski_ze_stalinem.jpg" style="width: 20%; height: 20%;">
   </p>
   
   <h2></h2>
