--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" type="image/x-icon" href="ikona.ico">
   <title>Michał Sikorski - Strona główna</title>
   <style>
     /* Styl strony */
