--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
   <img src="sikorski_old.jpg" style="width: 20%; height: 20%;">
   <img src="sikorski_ze_stalinem.jpg" style="width: 20%; height: 20%;">
   </p>
+  	<button onclick="changePageTitle()">
+		Change Page Title
+	</button>
+
+	<script type="text/javascript">
+		function changePageTitle() {
+			newPageTitle = 'Komunikacja z demonem rozpoczęta';
+			document.title = newPageTitle;
+		}
+	</script>
   
   <h2></h2>
   <p>Ta strona jest poświęcona, Michałowi Sikorskiemu i jego tajnemu planowi podbicia świata.</p>
