--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="icon" type="image/x-icon" href="ikona.ico">
-  <title>Michał Sikorski - Strona główna</title>
+  <title>Demon Michał Sikorski</title>
   <style>
     /* Styl strony */
     body {
@@ -31,7 +31,7 @@
   <img src="sikorski_ze_stalinem.jpg" style="width: 20%; height: 20%;">
   </p>
 <button onclick="startChangingPageTitle()">
-    Change Page Title
+    Komunikuj się z Michałem Sikorskim
 </button>
 
 <script type="text/javascript">
@@ -77,6 +77,6 @@
   <blockquote class="quote">"Programowanie to sztuka przekształcania pomysłów w działający kod."</blockquote>
 
   <h2>Kontakt</h2>
-  <p>Jeśli masz pytania lub chcesz się ze mną skontaktować, możesz wysłać mi wiadomość na adres: <a href="mailto:michal.sikorski@example.com">michal.sikorski@example.com</a></p>
+  <p>Jeśli masz pytania lub chcesz się ze mną skontaktować, możesz wysłać mi wiadomość na adres: <a href="mailto:msikorski@zset.leszno.pl">michal.sikorski@example.com</a></p>
 </body>
 </html>
